
  - Removed deprecated option "tolerance".

  - Remove deprecated use of 'plugin' as an option. The directive ought to be
    the only way.

  - Removed deprecated option "experiment_explicit_tolerances".

  - Renamed "experiment_booking_algorithm" to "booking_algorithm", and changed
    the default value to "FULL". The old "SIMPLE" algorithm will be deprecated
    eventually.


2016-10-23

  - Modified parsing of transaction strings and links and tags. I did this to
    factor out the parsing of tags and links in order to add it to other
    transactions and minimize grammar code. There is user-visible impact to this
    change: all of a transaction's strings must appear before tags or links. You
    cannot place tags or links before or in-between strings anymore. This is a
    reasonable restriction and I doubt anybody did anyway.

  - Added support for tags and links to the Document directive. This works just
    as for Transactions, e.g.

      2016-10-23 document Assets:Checking "/statements/oct.pdf" #banking ^9fed846348c2

    The current tags on the tag stack are also included, like for transactions.


2016-10-10

  - Removed "experiment_explicit_tolerances" flag; made this supported by
    default permanently.


2016-10-08

  - Documented a subtle problem reported about balances against inventory of
    mixed at-cost and no-cost, added more context to the error and a unit test
    for balance checks with mixed at-cost and no-cost positions.

  - Fixed a bug in the full booking matching code whereby an existing position
    not held at cost would trip up the matching code. (Credits to Son Nguyen for
    finding and reporting.)

  - During ingest, when multiple extractors match a particular file, select the
    first matching account instead of raising an error.

  - Fixed accidentally colliding key-binding for invoking bean-price from Emacs,
    to C-c p.


2016-09-25

  - Fixed typo in grammar that was parsing a transaction flag as '#' into '*'.
